--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   width: 90%;
   /* border: 2px solid black; */
-  padding-left: 15%;
+  padding-left: 5%;
 }
 
 .about-left {
@@ -33,6 +33,7 @@
   font-weight: 600;
   font-size: 26px;
   color: #212ea0;
+  text-align: center;
 }
 
 .about h2 {
@@ -41,9 +42,17 @@
   color: #000f38;
   /* margin: 2px 0; */
   max-width: 400px;
+  text-align: center;
 }
 
 .about p {
   color: #676767;
   margin-bottom: 5px;
+  margin-top: 10px;
+  font-size: 17px;
+}
+.about-right div{
+display: flex;
+justify-content: center;
+align-items: center;
 }
