--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+/* Inter font family */
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* *{
+  box-sizing: border-box
+} */
+body {
+  @apply font-inter;
+}
+
+@layer components {
+  .sub-menu {
+    @apply z-50 text-white  absolute top-[11.5rem] space-y-4 py-[18px] rounded-[6px] origin-[50%_-170px] backdrop-blur bg-blue-700;
+  }
+}
+
+@layer utilities {
+  .flex-center {
+    @apply flex items-center;
+  }
+  .flex-center-between {
+    @apply flex items-center justify-between;
+  }
+}
