--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -20,8 +20,8 @@
   transform: translate(-50%, -50%);
 }
 .about h3 {
-  font-weight: 600;
-  font-size: 26px;
+    /* font-weight: 600;
+    font-size: 26px; */
   color: #212ea0;
   text-align: center;
 }
