--- a/src/Components/NavbarVidio/NavbarVidio.css
+++ b/src/Components/NavbarVidio/NavbarVidio.css
@@ -1,3 +1,32 @@
+/* @keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
+.rotate-video {
+  /* animation: rotate 200s linear infinite;} /* Adjust duration for speed */
+
+
+.carousel-frame {
+  width: 800px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.media-item {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
 @keyframes rotate {
   0% {
     transform: rotate(0deg);
@@ -8,5 +37,5 @@
 }
 
 .rotate-video {
-  animation: rotate 200s linear infinite; /* Adjust duration for speed */
+  animation: rotate 200s linear infinite;
 }
