--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,10 @@ body {
   font-size: 20px;
 }
 
-
+/* Hide scrollbar for WebKit browsers */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
 @layer components {
   .sub-menu {
