--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,59 @@ body {
     @apply flex items-center justify-between;
   }
 }
+
+
+#loader {
+  width: 100%;
+  height: 100%;
+  background-color: #f7f4f4;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  transition: all linear 0s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#loader h1 {
+  font-size: 4vw;
+  color: transparent;
+  background: linear-gradient(to right, orange, orangered);
+  -webkit-background-clip: text;
+  position: absolute;
+  opacity: 0;
+  animation: load 1s linear forwards;
+}
+
+#loader h1:nth-child(1) {
+  animation-delay: 0s;
+}
+#loader h1:nth-child(2) {
+  animation-delay: 1.5s;
+}
+#loader h1:nth-child(3) {
+  animation-delay: 3s;
+}
+
+@keyframes load {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@media (max-width: 1024px) {
+  #loader h1 {
+    font-size: 16vw !important;
+  }
+}
